--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@ hugo.linux
 
 # local binaries
 /.bin
+
+# add vscode workspace extensions
+/.vscode/*
+!/.vscode/extensions.json
+!/.vscode/settings.json
