Revert "add prettier, format some files to ensure it's sensible"
This reverts commit de66a28e581304c99506c924e5c10f6634474a15.

--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,8 @@
-baseURL: "https://madewhere.co/"
-languageCode: "en-us"
-title: "madewhere"
+baseURL: 'https://madewhere.co/'
+languageCode: 'en-us'
+title: 'madewhere'
 theme: ananke
-copyright: madewhere Contributors
+copyright: madewhere Contributors 
 
 taxonomies:
   category: categories
@@ -12,8 +12,8 @@ taxonomies:
 related:
   includeNewer: true
   indices:
-    - name: parent
-      weight: 100
+  - name: parent
+    weight: 100
   threshold: 80
   toLower: true
 
