--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -20,10 +20,13 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: "0.92.0"
+          hugo-version: "0.92.1"
+          extended: true
 
       - name: Build
-        run: hugo
+        run: hugo --minify
+        env:
+          HUGO_ENV: production
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
