--- a/config.yaml
+++ b/config.yaml
@@ -7,6 +7,7 @@ theme: ananke
 sectionPagesMenu: main
 paginate: 48
 enableRobotsTXT: true
+enableGitInfo: true
 
 defaultContentLanguage: en
 languages:
