--- a/config.yaml
+++ b/config.yaml
@@ -31,7 +31,7 @@ params:
   mainSections:
     - brands
 
-  referrer: false
+  referrer: true
 
   repository:
     text: github.com/madewhere/madewhere.co
