fix issue templates

--- a/.github/ISSUE_TEMPLATE/NEW-CONTENT.yml
+++ b/.github/ISSUE_TEMPLATE/NEW-CONTENT.yml
@@ -77,8 +77,8 @@ body:
       options:
         - "yes"
         - "no"
-      validations:
-        required: true
+    validations:
+      required: true
   - type: input
     id: affiliation_description
     attributes:
@@ -87,8 +87,9 @@ body:
       placeholder: ex. "Product Marketer, Social Media Manager, etc."
   - type: checkboxes
     id: license
-    description: Content on this site is [Creative Commons](https://creativecommons.org/licenses/by/4.0/) licensed; any content you provide will be licensed under those terms.
     attributes:
+      label: Licensing
+      description: Content on this site is [Creative Commons](https://creativecommons.org/licenses/by/4.0/) licensed; any content you provide will be licensed under those terms.
       options:
         - label: I agree to licensing this content under the Creative Commons Attribution 4.0 license
           required: true
